--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,7 +1,9 @@
+@use "../../sass/globals/variables" as *;
+@use "../../sass/globals/media-queries" as *;
+
 .home-section {
   display: grid;
   grid-template-rows: auto 1fr;
-  gap: 1.5rem;
   height: 100%;
 }
 
@@ -10,6 +12,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 1rem;
   gap: 1rem;
 
   .goal-buttons {
@@ -21,9 +24,24 @@
 .home-posts {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 1rem;
-  padding: 1rem;
   background-color: #222;
-  overflow-y: auto;
   height: 100%;
+
+  @include for-desktop {
+    // padding: 1rem 2rem;
+    // padding: 4rem 2rem;
+  }
+}
+
+.post-container {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 1rem;
+  height: 100%;
+
+  @include for-desktop {
+    padding: 4rem 2rem;
+  }
 }
